fixed stylesheet url

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fighting Game!</title>
-  <link rel="stylesheet" type="text/css" href="./Lewlews_Hall_of_Fame_Fight_files/main.css">
+  <link rel="stylesheet" type="text/css" href="./main.css">
 <style>
 #output {
   height: 80%;
